maze.lessons.maze.island.IslandMaze.scala.error
Escaper:23: error: value === is not a member of plm.universe.Direction
  if (getDirection()===Direction.NORD ) {
                    ^Escaper:29: error: value Nord is not a member of object plm.universe.Direction
  else while (getDirection() != Direction.Nord) {
                                          ^